# sengine

./: .gitmodules  CMakeLists.txt
cmake/: CopyDatafiles.cmake
datafiles/resources/assets/material/: .default.asset
include/assets/: asset.hpp  asset_database.hpp  material.hpp  model.hpp  texture.hpp
include/classes/: mesh.hpp  primitive.hpp
include/components/: camera.hpp  mesh_renderer.hpp  texture_renderer.hpp
include/core/: entity.hpp  types.hpp
include/enums/: asset_revision.hpp  asset_type.hpp
include/managers/: asset_manager.hpp  asset_manager.tpp  input_manager.hpp
include/structs/: asset_info.hpp
include/utils/: asset_util.hpp
src/assets/: asset.cpp  asset_database.cpp  material.cpp  model.cpp  shader.cpp  texture.cpp
src/classes/: mesh.cpp  primitive.cpp
src/components/: camera.cpp  mesh_renderer.cpp  texture_renderer.cpp
src/core/: engine.cpp  entity.cpp
src/managers/: asset_manager.cpp  input_manager.cpp
src/structs/assets/: asset_info.cpp
